# Tomatoes-DT

./: .gitignore  .gitmodules  README.md  README.md.orig  deployGui.sh
.cache/clangd/index/: app_environment.h.A73E7D3AD32BD0C1.idx  app_environment.h.F55C2FF981AC3BB1.idx  first_node.cpp.199EFABB5BA60EC2.idx  first_node.cpp.4CECB7AA5945CD20.idx  import_qml_components_plugins.h.CEBF97553C614C21.idx  import_qml_components_plugins.h.E32E97C2F73A8230.idx  import_qml_plugins.h.11E5858E37CD79BA.idx  import_qml_plugins.h.16F8A789BCFFF7C7.idx  main.cpp.50D89146B30D7E0A.idx  main.cpp.D7E75B9D7EB9BA0D.idx
.qtc_clangd/.cache/clangd/index/: FlowViewplugin_FlowViewPlugin.cpp.950EE72FDC4160C5.idx  FlowViewplugin_FlowViewPlugin.moc.5CBAB4C747008549.idx  FlowViewplugin_init.cpp.F7053E20E6894543.idx  QAbstractTableModel.30CBE3ED0BE2FC77.idx  QColor.083FBD5E80DC0B87.idx  QDir.3ACAC4B83E53171C.idx  QDirIterator.D15DD0B1249E67A2.idx  QFile.28648CEDAB6E8B88.idx  QFileInfo.D5A7E802E4913125.idx  QFileSystemWatcher.36625D50FB8BEDFB.idx  QFontDatabase.A25DA1A630296953.idx  QGuiApplication.E4213D754F93AE17.idx  QLoggingCategory.FE7B1FD60E345FFE.idx  QQmlApplicationEngine.85D02F4001A8D43A.idx  QRegularExpression.8722B14A13F933C5.idx  (+550 more)
src/test_node/: CMakeLists.txt  package.xml
src/test_node/scripts/: test.py
src/test_node/src/: testM.cpp
src/tomato_detection/: CMakeLists.txt  package.xml
src/tomato_detection/conf/: build_tree.yaml  kcl_applerobot.conf  kcl_applerobot.conf.orig  state_parameters.yaml  tracking_parameters.yaml
src/tomato_detection/config/: config.rviz  sim.rviz
src/tomato_detection/include/: apple_robot_defines.hpp
src/tomato_detection/launch/: kinematic_controller.launch  octomap.launch  rviz.launch  test_world.launch  utility_launcher.launch  vision_manager.launch
src/tomato_detection/models/: custom_botsort.yaml
src/tomato_detection/msg/: ControlData.msg  DriverCommand.msg  GripperState.msg  JointJog.msg  JointState.msg  StateData.msg  TPIKAction.msg  TPIKPriorityLevel.msg  TaskStatus.msg  state.msg  state_info.msg  tomato_info.msg
src/tomato_detection/rviz/: config.rviz
src/tomato_detection/scripts/: acmTest.py  acmTester.py  armMover.py  armMover.py.noconc  armMoverTpik.py  blobTester.py  counting.py  counting_detect.py  counting_track.py  detection.py  gripperCicler.py  gripperCloser.py  headTester.py  index.txt  mMover.py  moveitMover.py  numbers.txt  planTester.py  planTester.py.orig  plotter.py  pos.txt  positionsTester.py  splicerTester.py  val.txt
src/tomato_detection/src/: apple_robot_model.cpp  control_configuration.cpp  kinematic_controller.cpp  kinematic_controller_node.cpp  tomato_vision_manager.cpp  tomato_vision_manager.h  vision_node.cpp
src/tomato_detection/srv/: BestPos.srv  ControlCommand.srv  CurrentVisionState.srv  LatestTomatoPositions.srv  RosbagCmd.srv
src/tomato_detection/worlds/: test_world.world
src/tomato_gui/: CMakeLists.txt  package.xml  qmlmodules  tomato_gui.qmlproject  tomato_gui.qmlproject.qtds
src/tomato_gui/VisionConfig/: config.toml
src/tomato_gui/content/: App.qml  CMakeLists.txt  CameraPane.qml  CameraPaneForm.ui.qml  ControlPane.qml  ControlPaneForm.ui.qml  Screen01.ui.qml  YoloPane.qml  YoloPaneForm.ui.qml
src/tomato_gui/imports/: CMakeLists.txt
src/tomato_gui/imports/tomato_gui/: CMakeLists.txt  qmldir
src/tomato_gui/imports/tomato_gui/designer/: plugin.metainfo
src/tomato_gui/src/: imageprovider.cpp  imageprovider.cpp.orig  imageprovider.h  import_qml_plugins.h  main.cpp  processcaller.cpp  processcaller.h  tomatoeslistmodel.cpp  tomatoeslistmodel.h
src/tomato_octo/: CMakeLists.txt  package.xml
src/tomato_octo/launch/: tomato_octo.launch
src/tomato_octo/src/: tomato_octomap.cpp
src/tomato_sync_pub/: CMakeLists.txt  package.xml
src/tomato_sync_pub/src/: tomato_sync.cpp
src/tomato_test/: CMakeLists.txt  package.xml
src/tomato_test/src/: first_node.cpp
src/tomato_trajectory_splicer/: CMakeLists.txt  package.xml
src/tomato_trajectory_splicer/src/: tomato_trajectory_splicer.cpp
src/tomato_trajectory_splicer/srv/: SpliceService.srv
(+41 files in other folders)
